--- a/08_position_subtype_HLA/Position_regression.Rmd
+++ b/08_position_subtype_HLA/Position_regression.Rmd
@@ -55,11 +55,6 @@ apply_theme <- function(p) {
   - Subtype Chi-square
   - Subtype Chi-square rank: Subtype chi-square rank number
 - HLA References: Number of HLA References
-- HLA Chi-square was calculated by the contigency table of mutations and HLA coexist or not.
-  - HLA Chi-square sum: sum of HLA Chi-square test by position
-  - HLA Chi-square median: median of HLA Chi-square test by position
-  - HLA Chi-square mean: mean of HLA Chi-square test by position
-
 
 ## Subtype chi-square test rank and #HLA Reference, regression
 ```{r sct-rank-hla}
@@ -117,102 +112,102 @@ summary(model)
 confint(model)
 ```
 
-## Subtype chi-square test and HLA chi-square test mean, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test mean, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-mean}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.mean) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-mean} -->
+<!-- adf = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.mean) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype + HLA, data=df)
-summary(model)
-confint(model)
+<!-- model = rfit(Entropy ~ subtype + HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
 
-df = df %>% filter(Entropy > 0) 
-spearman = cor.test(df$Entropy, df$HLA, method = "spearman")
-print("Entropy x HLA chi-square test mean")
-print(spearman)
-```
+<!-- df = df %>% filter(Entropy > 0)  -->
+<!-- spearman = cor.test(df$Entropy, df$HLA, method = "spearman") -->
+<!-- print("Entropy x HLA chi-square test mean") -->
+<!-- print(spearman) -->
+<!-- ``` -->
 
-## Subtype chi-square test and HLA chi-square test mean with interaction, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test mean with interaction, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-mean-inter}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.mean) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-mean-inter} -->
+<!-- df = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.mean) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype * HLA, data=df)
-summary(model)
-confint(model)
-```
+<!-- model = rfit(Entropy ~ subtype * HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
+<!-- ``` -->
 
-## Subtype chi-square test and HLA chi-square test sum, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test sum, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-sum}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.sum) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-sum} -->
+<!-- df = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.sum) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype + HLA, data=df)
-summary(model)
-confint(model)
+<!-- model = rfit(Entropy ~ subtype + HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
 
-df = df %>% filter(Entropy > 0)
-spearman = cor.test(df$Entropy, df$HLA, method = "spearman")
-print("Entropy x HLA chi-square test sum")
-print(spearman)
-```
+<!-- df = df %>% filter(Entropy > 0) -->
+<!-- spearman = cor.test(df$Entropy, df$HLA, method = "spearman") -->
+<!-- print("Entropy x HLA chi-square test sum") -->
+<!-- print(spearman) -->
+<!-- ``` -->
 
-## Subtype chi-square test and HLA chi-square test sum with interaction, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test sum with interaction, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-sum-inter}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.sum) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-sum-inter} -->
+<!-- df = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.sum) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype * HLA, data=df)
-summary(model)
-confint(model)
-```
+<!-- model = rfit(Entropy ~ subtype * HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
+<!-- ``` -->
 
 
-## Subtype chi-square test and HLA chi-square test median, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test median, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-median}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.median) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-median} -->
+<!-- df = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.median) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype + HLA, data=df)
-summary(model)
-confint(model)
+<!-- model = rfit(Entropy ~ subtype + HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
 
-df = df %>% filter(Entropy > 0)
-spearman = cor.test(df$Entropy, df$HLA, method = "spearman")
-print("Entropy x HLA chi-square test median")
-print(spearman)
-```
+<!-- df = df %>% filter(Entropy > 0) -->
+<!-- spearman = cor.test(df$Entropy, df$HLA, method = "spearman") -->
+<!-- print("Entropy x HLA chi-square test median") -->
+<!-- print(spearman) -->
+<!-- ``` -->
 
-## Subtype chi-square test and HLA chi-square test median with interaction, Rfit
+<!-- ## Subtype chi-square test and HLA chi-square test median with interaction, Rfit -->
 
-Positions without HLA Chi-square test were treated as 0.
+<!-- Positions without HLA Chi-square test were treated as 0. -->
 
-```{r sct-hct-median-inter}
-df = read.csv('correlation_data.csv') %>% 
-  mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.median) %>%
-  mutate(HLA=replace_na(HLA, 0))
+<!-- ```{r sct-hct-median-inter} -->
+<!-- df = read.csv('correlation_data.csv') %>%  -->
+<!--   mutate(subtype=Subtype.Chi.square, HLA=HLA.Chi.square.median) %>% -->
+<!--   mutate(HLA=replace_na(HLA, 0)) -->
 
-model = rfit(Entropy ~ subtype * HLA, data=df)
-summary(model)
-confint(model)
-```
+<!-- model = rfit(Entropy ~ subtype * HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
+<!-- ``` -->
